--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,16 @@
 {
 "manifest_version": 2,
-    "name": "Typeracer Hack",
-    "description": "Autoplays typeracer",
-    "version": "1.0",
-    "background": {
-        "scripts": ["background.js"]
-    },
-    "browser_action": {
-      "default_icon": "logo.png"
-    },
-    "permissions": ["activeTab"]
+	"name": "Typeracer Hack",
+	"description": "Autoplays typeracer",
+	"version": "1.0",
+	
+	"background": {
+		"scripts": ["background.js"]
+	},
+	"browser_action": {
+	  "default_icon": "logo.png",
+	  "default_popup": "options.html"
+	},
+	"permissions": ["activeTab", "storage"]
 }
+
