--- a/manifest.json
+++ b/manifest.json
@@ -3,13 +3,9 @@
 	"name": "Typeracer Hack",
 	"description": "Autoplays typeracer",
 	"version": "1.0",
-	
-	"background": {
-		"scripts": ["background.js"]
-	},
 	"browser_action": {
 	  "default_icon": "logo.png",
-	  "default_popup": "options.html"
+	  "default_popup": "popup.html"
 	},
 	"permissions": ["activeTab", "storage"]
 }
